refactor: improve media handling and update service tests